force-app/main/default/objects/Deal__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Lookup</type>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Deals</relationshipName>
    <relationshipLabel>Deals</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>