force-app/main/default/objects/Deal__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Text</type>
    <length>100</length>
</CustomField>