force-app/main/default/objects/Deal__c/fields/Days_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Close__c</fullName>
    <label>Days To Close</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>Close_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>