force-app/main/default/objects/Deal__c/fields/Deal_Health__c.field-meta.xml
<CustomField>
    <fullName>Deal_Health__c</fullName>
    <label>Deal Health</label>
    <type>Text</type>
    <formula>IF(Win_Probability__c &gt;= 75,"Green",IF(Win_Probability__c &gt;= 40,"Yellow","Red"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>