force-app/main/default/objects/Deal__c/fields/Deal_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Source__c</fullName>
    <label>Deal Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value>
            <value><fullName>Outbound</fullName><default>false</default><label>Outbound</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Partner</fullName><default>false</default><label>Partner</label></value>
            <value><fullName>Event</fullName><default>false</default><label>Event</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>