force-app/main/default/objects/Deal__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Prospecting</fullName><default>true</default><label>Prospecting</label></value>
            <value><fullName>Qualification</fullName><default>false</default><label>Qualification</label></value>
            <value><fullName>Proposal</fullName><default>false</default><label>Proposal</label></value>
            <value><fullName>Negotiation</fullName><default>false</default><label>Negotiation</label></value>
            <value><fullName>Closed Won</fullName><default>false</default><label>Closed Won</label></value>
            <value><fullName>Closed Lost</fullName><default>false</default><label>Closed Lost</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>