force-app/main/default/objects/Deal__c/fields/Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Deal_Value__c</fullName>
    <label>Deal Value</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>