force-app/main/default/objects/Deal__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <label>Expected Revenue</label>
    <type>Currency</type>
    <formula>Deal_Value__c * Win_Probability__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>