force-app/main/default/objects/Deal__c/fields/Is_Strategic__c.field-meta.xml
<CustomField>
    <fullName>Is_Strategic__c</fullName>
    <label>Is Strategic</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>