force-app/main/default/objects/Deal__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>