force-app/main/default/objects/Deal__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Sales_Territory__c</referenceTo>
    <relationshipName>Deals</relationshipName>
    <relationshipLabel>Deals</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>