force-app/main/default/objects/Deal__c/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <label>Win Probability</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>