force-app/main/default/objects/Deal__c/validationRules/Close_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Future</fullName>
    <active>true</active>
    <description>Close Date must be today or in the future for new records</description>
    <errorConditionFormula>AND(
    ISNEW(),
    Close_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Close Date must be today or in the future</errorMessage>
</ValidationRule>