force-app/main/default/objects/Deal__c/validationRules/Closed_Lost_Needs_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Needs_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Deal_Stage__c,&quot;Closed Lost&quot;), ISBLANK(Next_Step__c))</errorConditionFormula>
    <errorDisplayField>Next_Step__c</errorDisplayField>
    <errorMessage>Please provide a reason for losing in the Next Step field</errorMessage>
</ValidationRule>