force-app/main/default/objects/Deal__c/validationRules/Deal_Value_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Deal_Value_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Deal_Value__c)), Deal_Value__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Deal_Value__c</errorDisplayField>
    <errorMessage>Deal Value must be greater than zero</errorMessage>
</ValidationRule>