force-app/main/default/objects/Deal__c/validationRules/Require_Value_For_Late_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Value_For_Late_Stage</fullName>
    <active>true</active>
    <description>Requires Deal Value for stages beyond Qualification</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Deal_Stage__c, "Proposal"),
        ISPICKVAL(Deal_Stage__c, "Negotiation"),
        ISPICKVAL(Deal_Stage__c, "Closed Won")
    ),
    ISBLANK(Deal_Value__c)
)</errorConditionFormula>
    <errorDisplayField>Deal_Value__c</errorDisplayField>
    <errorMessage>Deal Value is required for stages beyond Qualification</errorMessage>
</ValidationRule>