force-app/main/default/objects/Deal__c/validationRules/Strategic_Deal_Needs_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Strategic_Deal_Needs_Contact</fullName>
    <active>true</active>
    <description>Strategic deals must have a Primary Contact</description>
    <errorConditionFormula>AND(
    Is_Strategic__c = true,
    ISBLANK(Primary_Contact__c)
)</errorConditionFormula>
    <errorDisplayField>Primary_Contact__c</errorDisplayField>
    <errorMessage>Strategic deals must have a Primary Contact</errorMessage>
</ValidationRule>